--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <pre>
 <code>
-#include <iostream>
-#include <vector>
+#include &gt;iostream&lt;
+#include &gt;vector&lt;
 #include "Block.h"
 
 unsigned long difficulty = 1;
