--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <pre>
 <code>
-#include &gt;iostream&lt;
-#include &gt;vector&lt;
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
 #include "Block.h"
 
 unsigned long difficulty = 1;
