--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -156,7 +156,10 @@ class Blockchain
     /*position: absolute;*/
     right: 90px;
     top: 140px;
-	    "><img src="css/world.png"/>
+	    ">
+	    <img src="css/world.png" style="
+    width: 103px;
+">
 	    </center>
     node.files.add(new node.types.Buffer('<json id="json"></json>'), (err, filesAdded) => {
       if (err) {
