--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -181,7 +181,7 @@ class Blockchain
   
         console.log(data.toString())
       })</pre>
-    <h1> - С помощью ключа <span id="hash_table_hash"></span> получаем из распределённого хранилища JSON файл с нужными блоками <br> вывод :</h1>
+    <h1> - С помощью ключа <span id="hash_table_hash"></span> получаем обратно JSON файл с нужными блоками <br> вывод :</h1>
   
     <pre>
      
