--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -26,7 +26,7 @@
         }      
         calculateHash()						             
         {
-            return Encrypted.SHA256(this.index + this.previousHash + this.timeStamp + this.data + this.nonce).toString();
+            return Encrypt.SHA256(this.index + this.previousHash + this.timeStamp + this.data + this.nonce).toString();
         }        
         mineBlock(difficulty)                                                                                                         
         {
