--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -36,12 +36,10 @@
               this.hash = this.calculateHash();
             }
           console.log(" + блок "+this.index+" : " + this.hash);
-        }
-      }
-      <center style="
-    /*position: absolute;*/
-    right: 90px;
-    top: 140px;
+	        <center style="
+    position:absolute;
+    right:30%;
+   /*top:140px;*/
 "><svg xmlns="
 http://www.w3.org/2000/svg
 " width="103" height="101.4" viewBox="0 0 103 101.4">
@@ -61,6 +59,9 @@ http://www.w3.org/2000/svg
 <path class="st40" d="M53.2 36.6h-3.6c-2.2 0-4-1.8-4-4v-.3c0-2.2 1.8-4 4-4h3.6c2.2 0 4 1.8 4 4v.3c0 2.2-1.8 4-4 4zm15.7 0h-3.6c-2.2 0-4-1.8-4-4v-.3c0-2.2 1.8-4 4-4h3.6c2.2 0 4 1.8 4 4v.3c0 2.2-1.8 4-4 4zM76.8 50h-3.6c-2.2 0-4-1.8-4-4v-.3c0-2.2 1.8-4 4-4h3.6c2.2 0 4 1.8 4 4v.3c0 2.2-1.8 4-4 4zm-47.3 0h-3.6c-2.2 0-4-1.8-4-4v-.3c0-2.2 1.8-4 4-4h3.6c2.2 0 4 1.8 4 4v.3c0 2.2-1.8 4-4 4z"></path><path class="st0" d="M25.2 47.3H14.3c-.6 0-1.1-.5-1.1-1.1 0-.6.5-1.1 1.1-1.1h10.9c.6 0 1.1.5 1.1 1.1 0 .6-.5 1.1-1.1 1.1zm15.6 0h-11c-.6 0-1.1-.5-1.1-1.1 0-.6.5-1.1 1.1-1.1h10.9c.6 0 1.1.5 1.1 1.1.1.6-.4 1.1-1 1.1zm15.7 0H45.6c-.6 0-1.1-.5-1.1-1.1 0-.6.5-1.1 1.1-1.1h10.9c.6 0 1.1.5 1.1 1.1 0 .6-.5 1.1-1.1 1.1zm15.8 0H61.4c-.6 0-1.1-.5-1.1-1.1 0-.6.5-1.1 1.1-1.1h10.9c.6 0 1.1.5 1.1 1.1 0 .6-.5 1.1-1.1 1.1zm17.1 0h-11c-.6 0-1.1-.5-1.1-1.1 0-.6.5-1.1 1.1-1.1h10.9c.6 0 1.1.5 1.1 1.1 0 .6-.5 1.1-1 1.1z"></path><path class="st40" d="M45 50h-3.6c-2.2 0-4-1.8-4-4v-.3c0-2.2 1.8-4 4-4H45c2.2 0 4 1.8 4 4v.3c0 2.2-1.8 4-4 4zm15.7 0H57c-2.2 0-4-1.8-4-4v-.3c0-2.2 1.8-4 4-4h3.6c2.2 0 4 1.8 4 4v.3c.1 2.2-1.7 4-3.9 4z"></path><path class="st18" d="M100.2 85.5H3.1c-.6 0-1.1-.5-1.1-1.2l8.5-19.9c0-.7.5-1.2 1.1-1.2h79.6c.6 0 1.1.6 1.1 1.2l9 19.9c0 .7-.5 1.2-1.1 1.2zM90.6 15H12.2c-.6 0-1.1.6-1.1 1.2V63h80.7V16.3c-.1-.7-.6-1.3-1.2-1.3zm-4.7 39.7c0 1.3-1.1 2.3-2.3 2.3H19.2c-1.3 0-2.3-1.1-2.3-2.3V23.3c0-1.3 1.1-2.3 2.3-2.3h64.4c1.3 0 2.3 1.1 2.3 2.3v31.4z"></path><path class="st10" d="M65.5 80.2H35.4c-.5 0-1-.7-1-1.6l1.4-6c0-.9.4-1.6 1-1.6H64c.5 0 1 .7 1 1.6l1.4 6c.1.9-.4 1.6-.9 1.6z"></path></g>
 </svg>
 </center>
+        }
+      }
+
 class Blockchain
       {
         constructor()
