--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -154,9 +154,9 @@ class Blockchain
      <h1> (соединяет все вычислительные устройства сети единой файловой системой)</h1>
     <pre>
     <center style="
-    /*position: absolute;*/
-    right: 90px;
-    top: 140px;
+    position:absolute;
+    right:30%;
+    /*top:140px;*/
 	    ">
 	    <img src="css/world.png" style="
     width: 103px;
