--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -169,7 +169,7 @@ class Blockchain
   <h2> (одноранговая распределенная файловая система соединяет все вычислительные устройства единой системой файлов)</h2>-->
 
   <h1 style="font-weight:900;display: inline-block;">- [3] : получаем ключ : </h1><span id="hashtablehash"> ----</span>
-    <h1> - проверяем командой в console :</h1>
+    <h1> - проверяем командой в консоли:</h1>
     <pre>    node.files.cat('<span id="hashtable_hash"></span>', function (err, data) {
         if (err) {
           return console.error('ошибка')
