--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -8,11 +8,15 @@
  </head>
 <body>
     <div class="container">
-    <h1 id="time"></h1><h1 id="t"> - [0] : </h1><h1 id="status">*:*</h1></h1>
+    <h1 id="time" style="
+    display: inline;
+"><h1 id="t"> - [0] : </h1><h1 id="status">*:*</h1></h1>
     <code id="a1" style="display:none;"></code>
     <!--<br>-->
-    <decrypted id="a2"></decrypted>
-    <h1> - [1] : создание блоков</h1>
+    <decrypted id="a2"></decrypted><br>
+    <h1 style="
+    display: inline;
+"> - [1] : создание блоков</h1>
     <pre>class Block
       {
         constructor(index, timeStamp, data, previousHash)
