--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -38,7 +38,7 @@
 </svg>
     <h1 id="time" style="
     display: inline;
-"><h1 id="t"> - [0] : </h1><h1 id="status">*:*</h1></h1>
+"><h1 id="t"></h1><h1 id="status">*:*</h1></h1>
     <code id="a1" style="display:none;"></code>
     <!--<br>-->
     <decrypted id="a2"></decrypted><br>
