--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -83,7 +83,9 @@
               this.hash = this.calculateHash();
             }
           console.log(" + блок "+this.index+" : " + this.hash);<center style="
-    position:absolute;right:40%;/*top:140px;*/"><svg xmlns="
+          position: absolute;
+      right: 200px;
+      top: 225px;"><svg xmlns="
 http://www.w3.org/2000/svg
 " width="103" height="101.4" viewBox="0 0 103 101.4">
 <circle class="st16" cx="51.7" cy="50.7" r="50.7" id="Layer_3"></circle>
