--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -199,9 +199,9 @@ class Blockchain
      <h1> (соединяет все вычислительные устройства сети единой файловой системой)</h1>
     <pre>
     <center style="
-    position:absolute;
-    right:45%;
-    /*top:140px;*/
+    position: absolute;
+    right: 460px;
+    top: 190px;
 	    ">
 	    <img src="css/world.png" style="
     width: 103px;
