--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -85,8 +85,11 @@
             }
           console.log(" + блок "+this.index+" : " + this.hash);<center style="
     position: absolute;
-    right: 460px;
-    top: 190px;"><svg xmlns="
+    right: 120px;
+    top: 172px;
+    border-radius: 100%;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.25), 0 1px 1px;
+    padding: 23px;"><svg xmlns="
 http://www.w3.org/2000/svg
 " width="103" height="101.4" viewBox="0 0 103 101.4">
 <circle class="st16" cx="51.7" cy="50.7" r="50.7" id="Layer_3"></circle>
