--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -202,10 +202,9 @@ class Blockchain
      <h1>- [2] : В формате <a href="https://ru.wikipedia.org/wiki/JSON" target="blank">JSON</a> добавляем блоки в распределенный реестр <a href="https://ru.wikipedia.org/wiki/IPFS" target="blank">IPFS</a></h1>
      <h1> (соединяет все вычислительные устройства сети единой файловой системой)</h1>
     <pre>
-    <center style="right:45%;
-   position: absolute;
-   right: 460px;
-   top: 190px;">
+    <center style="position: absolute;
+    right: 456px;
+    top: 380px;">
 	    <img src="css/world.png" style="
     width: 103px;
 ">
