--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -65,7 +65,9 @@
     color: blue;
 ">Block</span>
       {
-        constructor(index, timeStamp, data, previousHash)
+        <span style="
+    color: burlywood;
+">constructor</span>(index, timeStamp, data, previousHash)
         {
           this.index = index;                                                                                                             
           this.timeStamp = timeStamp;                                                                                                                 
