--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -64,7 +64,9 @@
 ">class</span> <span style="
     color: blue;
 ">Block</span>
-      {
+      <span style="
+    color: orange;
+">{</span>
         <span style="
     color: burlywood;
 ">constructor</span>(index, timeStamp, data, previousHash)
