--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -70,16 +70,58 @@
 ">{</span>
         <span style="
     color: burlywood;
-">constructor</span>(index, timeStamp, data, previousHash)
-        {
-          this.index = index;                                                                                                             
-          this.timeStamp = timeStamp;                                                                                                                 
-          this.data = data;
-          this.previousHash = previousHash;
-          this.hash = this.calculateHash();
-          this.nonce = 0;                                                                                                   
+">constructor</span><span style="
+    color: orange;
+">(</span><span style="
+    color: green;
+">index</span>, <span style="
+    color: green;
+            ">timeStamp</span>, <span>data</span>, <span>previousHash</span>)
+        <span style="
+    color: orange;
+">{</span>
+          <span style="
+    color: violet;
+">this</span><span style="
+    color: orange;
+">.</span><span style="
+    color: green;
+">index</span> <span style="
+    color: burlywood;
+">=</span> <span style="
+    color: orange;
+">index</span>;                                                                                                             
+          <span style="
+    color: violet;
+">this</span>.<span style="
+    color: green;
+">timeStamp</span> = <span>timeStamp</span>;                                                                                                                 
+          <span style="
+    color: violet;
+">this</span>.data = data;
+          <span style="
+    color: violet;
+">this</span>.previousHash = previousHash;
+          <span style="
+    color: violet;
+                       ">this</span>.<span style="
+    color: green;
+">hash</span> = <span style="
+    color: blue;
+">this</span>.<span style="
+    color: green;
+">calculateHash</span><span style="
+    color: orange;
+">()</span>;
+          <span style="
+    color: violet;
+">this</span>.nonce = 0;                                                                                                   
         }      
-        calculateHash()						             
+        <span style="
+    color: blue;
+">calculateHash</span><span style="
+    color: orange;
+">()</span>						             
         {
         return Encrypt.SHA256(this.index + this.previousHash + this.timeStamp + this.data + this.nonce).toString();
         }        
@@ -206,36 +248,6 @@ class Blockchain
     }
   }
 }</pre>
-     <h1>- [2] : В формате <a href="https://ru.wikipedia.org/wiki/JSON" target="blank">JSON</a> добавляем блоки в распределенный реестр <a href="https://ru.wikipedia.org/wiki/IPFS" target="blank">IPFS</a></h1>
-     <h1> (соединяет все вычислительные устройства сети единой файловой системой)</h1>
-    <pre>
-    <center style="position: absolute;
-    right: 456px;
-    top: 380px;">
-	    <img src="css/world.png" style="
-    width: 103px;
-">
-	    </center>
-    node.files.add(new node.types.Buffer('<json id="json"></json>'), (err, filesAdded) => {
-      if (err) {
-        return console.error('ошибка')
-      }
-
-      filesAdded.forEach((file) => console.log('successfully stored', file.hash))
-    })</pre>
- 
-  <!--<h1> - 2 : полученные цепочки кладем в распределенную хэш таблицу, получаем ключ </h1>
-  <h2> (одноранговая распределенная файловая система соединяет все вычислительные устройства единой системой файлов)</h2>-->
-
-  <h1 style="font-weight:900;display: inline-block;">- [3] : получаем ключ : </h1><span id="hashtablehash"> ----</span>
-    <h1> - проверяем командой в консоли:</h1>
-    <pre>    node.files.cat('<span id="hashtable_hash"></span>', function (err, data) {
-        if (err) {
-          return console.error('ошибка')
-        }
-  
-        console.log(data.toString())
-      })</pre>
     <h1> - С помощью ключа <span id="hash_table_hash"></span> получаем обратно JSON файл с нужными блоками <br> вывод :</h1>
   
     <pre>
