--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -95,7 +95,11 @@
     color: violet;
 ">this</span>.<span style="
     color: green;
-">timeStamp</span> = <span>timeStamp</span>;                                                                                                                 
+">timeStamp</span> <span style="
+    color: burlywood;
+">=</span> <span style="
+    color: orange;
+">timeStamp</span>;                                                                                                                 
           <span style="
     color: violet;
 ">this</span>.data = data;
@@ -248,9 +252,6 @@ class Blockchain
     }
   }
 }</pre>
-    <h1> - С помощью ключа <span id="hash_table_hash"></span> получаем обратно JSON файл с нужными блоками <br> вывод :</h1>
-  
-    <pre>
      
     <json id="jsn"></json>
     
