--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -74,7 +74,9 @@
     color: orange;
 ">(</span><span style="
     color: green;
-">index</span>, <span style="
+            ">index</span><span style="
+    color: orange;
+">,</span> <span style="
     color: green;
             ">timeStamp</span>, <span>data</span>, <span>previousHash</span>)
         <span style="
