--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -253,10 +253,11 @@ class Blockchain
       }
     }
   }
-}</pre>
+}</pre><h1> - С помощью ключа <span id="hash_table_hash"></span> получаем обратно JSON файл с нужными блоками <br> вывод :</h1>
+  
+    <pre>
      
     <json id="jsn"></json>
-    
     </pre>
  
     <script  src="js/index.js"></script>
