--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -62,7 +62,7 @@
             </div>
           </nav>
 	    
-    <pre><span style="
+   <pre><span style="
     color: violet;
 ">class</span> <span style="
     color: blue;
@@ -76,11 +76,17 @@
     color: orange;
 ">(</span><span style="
     color: green;
-            ">index</span><span style="
+    background: #fff;
+    border-radius: 7px;
+    padding: 5px;
+    ">index</span><span style="
     color: orange;
 ">,</span> <span style="
+    background: #fff;
+    border-radius: 7px;
+    padding: 5px;
     color: green;
-            ">timeStamp</span>, <span>data</span>, <span>previousHash</span>)
+    ">timeStamp</span>, <span>data</span>, <span>previousHash</span>)
         <span style="
     color: orange;
 ">{</span>
