--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -150,7 +150,7 @@
     position: absolute;
     right: 285px;
     top: 172px;
-    border-radius: 100%;
+     border-radius: 8px;
     box-shadow: 0 1px 1px rgba(0,0,0,0.25), 0 1px 1px;
     padding: 23px;
     background: #fff;"><svg xmlns="
