--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -100,7 +100,10 @@
     color: burlywood;
 ">=</span> <span style="
     color: orange;
-">index</span>;                                                                                                             
+">index</span>
+<span style="
+    color: burlywood;
+		  ">;</span>                                                                                                             
           <span style="
     color: violet;
 ">this</span>.<span style="
