--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -100,8 +100,7 @@
     color: burlywood;
 ">=</span> <span style="
     color: orange;
-">index</span>
-<span style="
+">index</span><span style="
     color: burlywood;
 		  ">;</span>                                                                                                             
           <span style="
