--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -62,7 +62,7 @@
             </div>
           </nav>
 	    
-   <pre><span style="
+  <pre><span style="
     color: violet;
 ">class</span> <span style="
     color: blue;
@@ -86,7 +86,23 @@
     border-radius: 7px;
     padding: 5px;
     color: green;
-    ">timeStamp</span>, <span>data</span>, <span>previousHash</span>)
+    ">timeStamp</span><span style="
+    color: orange;
+">,</span> <span style="
+    background: #fff;
+    border-radius: 7px;
+    padding: 5px;
+    color: green;
+            ">data</span><span style="
+    color: orange;
+">,</span> <span style="
+    background: #fff;
+    border-radius: 7px;
+    padding: 5px;
+    color: green;
+">previousHash</span><span style="
+    color: orange;
+">)</span>
         <span style="
     color: orange;
 ">{</span>
