--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -13,7 +13,7 @@
     <div class="container">
 <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-              <span class="navbar-item" href="https://bulma.io">
+              <span class="navbar-item" href="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64" xmlns:xlink="http://www.w3.org/1999/xlink">
                   <defs>
                     <linearGradient id="c" x1="47.952%" x2="47.952%" y1="97.595%" y2="0%">
@@ -32,7 +32,7 @@
                   </defs>
                   <g fill="none" fill-rule="evenodd">
                     <g transform="translate(0 4)">
-                      <use fill="#000000" stroke="url(#c)" stroke-width="6" mask="url(#d)" xlink:href="#a"></use>
+                      <use fill="#FFF" stroke="url(#c)" stroke-width="6" mask="url(#d)" xlink:href="#a"></use>
                       <rect width="9.622" height="1.874" x="19.037" y="20.894" fill="#FFFFFF"></rect>
                       <polygon fill="#FFFFFF" points="9.573 9.2 5.62 7.109 8.487 0 .016 7.635 3.738 10.153 1.101 16.836" transform="translate(6.53 6.838)"></polygon>
                     </g>
@@ -44,9 +44,9 @@
                   </g>
                 </svg>
               </span>
-              <span class="navbar-item" href="https://bulma.io">
+              <span class="navbar-item" href="">
                 <h1 id="time"></h1><h1 id="t"></h1><h1 id="status"> - [0] : connect : true (проверка соединения)</h1>
-    <code id="a1" style="display:none;">U2FsdGVkX18tmrSgS2LYaSXYx6HvKi18r6dZGjz0Ds/Rcc7+btY42jc2cQ3kuZHBWF5g6zlMT+d3kZvRAUoEdP7NYRbaWbqgqvaijiXpXN6s2L7M4njqf6WgpS/LjmA8aChn6U1anE3LLck52EOVj0JztIMkc8rZjb/w3jMIzzjfdK9OKUEOckjg0ck799Dhm8JAEoxAagYIzNSKP1yZHA==</code>
+    <code id="a1" style="display:none;"></code>
     <!--<br>-->
     <decrypted id="a2"></decrypted>
     <h1 style="
