--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -170,7 +170,7 @@
     right: 285px;
     top: 172px;
      border-radius: 8px;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.25), 0 1px 1px;
+    /*box-shadow: 0 1px 1px rgba(0,0,0,0.25), 0 1px 1px;*/
     padding: 23px;
     background: #fff;"><svg xmlns="
 http://www.w3.org/2000/svg
