--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -17,8 +17,8 @@
                   <defs>
                     <linearGradient id="c" x1="47.952%" x2="47.952%" y1="97.595%" y2="0%">
                       <stop stop-color="#FFB300" offset="0%"></stop>
-                      <stop stop-color="#DD3939" offset="61.372%"></stop>
-                      <stop stop-color="#FF1BB4" offset="100%"></stop>
+                      <stop stop-color="blue" offset="61.372%"></stop>
+                      <stop stop-color="blue" offset="100%"></stop>
                     </linearGradient>
                     <path id="a" d="M0,4.99424261 C0,2.23599858 2.2402674,0 4.99531509,0 L59.0046849,0 C61.7635213,0 64,2.22982375 64,4.99424261 L64,51.0057574 C64,53.7640014 61.7597326,56 59.0046849,56 L4.99531509,56 C2.23647875,56 0,53.7701762 0,51.0057574 L0,4.99424261 Z"></path>
                     <mask id="d" width="64" height="56" x="0" y="0" fill="white">
