--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -37,8 +37,8 @@
                     </g>
                     <g transform="translate(0 4)">
                       <use fill="#FFF" stroke="url(#c)" stroke-width="6" mask="url(#e)" xlink:href="#b"></use>
-                      <rect width="9.622" height="1.874" x="19.037" y="20.894" fill="#000"></rect>
-                      <polygon fill="#000" points="9.573 9.2 5.62 7.109 8.487 0 .016 7.635 3.738 10.153 1.101 16.836" transform="translate(6.53 6.838)"></polygon>
+                      <rect width="9.622" height="1.874" x="19.037" y="20.894" fill="green"></rect>
+                      <polygon fill="green" points="9.573 9.2 5.62 7.109 8.487 0 .016 7.635 3.738 10.153 1.101 16.836" transform="translate(6.53 6.838)"></polygon>
                     </g>
                   </g>
                 </svg>
