--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -279,7 +279,7 @@ class Blockchain
       }
     }
   }
-}</pre><h1>- [2] : В формате JSON добавляем блоки в распределенный реестр <a href="https://ru.wikipedia.org/wiki/IPFS" target="blank">IPFS</a></h1>
+}</pre><h1>- [2] : В формате <a href="https://ru.wikipedia.org/wiki/JSON" target="blank">JSON</a> добавляем блоки в распределенный реестр <a href="https://ru.wikipedia.org/wiki/IPFS" target="blank">IPFS</a></h1>
      <h1> (соединяет все вычислительные устройства сети единой файловой системой)</h1>
     <pre>node.files.add(new node.types.Buffer('<json id="json"></json>'), (err, filesAdded) => {
       if (err) {
