--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -61,7 +61,9 @@
               </button>
             </div>
           </nav>
-	    
+	</div>
+	
+<div class="container">	    
   <pre><span style="
     color: violet;
 ">class</span> <span style="
@@ -308,6 +310,8 @@ class Blockchain
     <json id="jsn"></json>
     
     </pre>
+	
+	</div>
  
     <script  src="js/index.js"></script>
 </body>
