--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ue</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+    <style>
+      ::-webkit-scrollbar {
+    width: 0px;
+    background: coral;
+}
+    </style>
    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
   </head>
   <body>
