--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -8,7 +8,7 @@
     <style>
       ::-webkit-scrollbar {
     width: 0px;
-    background: coral;
+  /*  background: coral;*/
 }
     </style>
    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
