--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -15,7 +15,6 @@
    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
   </head>
   <body>
-	<iframe src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" allowfullscreen="" width="100%" height="281" frameborder="0">
-	</iframe>
+	<img src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" width="100%" height="281"/>
   </body>
 </html>
