--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -16,5 +16,6 @@
   </head>
   <body>
 	<img src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" width="100%" height="281"/>
+	  <img src="https://pp.userapi.com/c836732/v836732534/3c729/f-kXEMVp4-Y.jpg" width="100%" height="281"/>
   </body>
 </html>
