--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -20,6 +20,9 @@
 	  <img src="https://pp.userapi.com/c836732/v836732534/3c729/f-kXEMVp4-Y.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637124/v637124534/4e582/0TdHnKsryhA.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c636321/v636321534/5f61f/xIJX2DukDR4.jpg" width="100%" height="281"/>
+	   	   <iframe src="//vk.com/video_ext.php?oid=331934534&id=456239336&hash=aa6fb22b067febf0&hd=2" width="100%" height="480" frameborder="0" allowfullscreen></iframe>
+	   
+	   <iframe src="//vk.com/video_ext.php?oid=331934534&id=456239124&hash=67fe833398183283&hd=2" width="100%" height="480" frameborder="0" allowfullscreen></iframe>
 	   <!--
 	   
 	   <img src="https://pp.userapi.com/c841537/v841537476/132d5/2LAwgLDfOls.jpg" width="100%" height="281"/>
