--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ue</title>
+    <title>blockchain</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
     <style>
       ::-webkit-scrollbar {
@@ -12,10 +12,11 @@
   /*  background: coral;*/
 }
     </style>
-   <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
   </head>
    <body>
 <img src="https://pp.userapi.com/c841620/v841620337/65ce2/3CJtu_pWMMM.jpg" width="100%" height="281"/>
+<iframe src="https://vk.com/video_ext.php?oid=154407121&id=456239050&hash=0e7c701b2e494e8b&hd=1" width="100%" height="480" frameborder="0">
+	</iframe>
 
   </body>
 </html>
