--- a/showcase/sysadmin/index.html
+++ b/showcase/sysadmin/index.html
@@ -8,11 +8,11 @@
     <style>
       ::-webkit-scrollbar {
     width: 0px;
-        img{display:none}
+      /*  img{display:none}*/
 }</style>
   </head>
    <body>
-<img src="" width="100%" height="281"/>
+<img src="https://pp.userapi.com/c840637/v840637845/24532/AECqL-4x0bM.jpg" width="100%" height="281"/>
 
   </body>
 </html>
