--- a/showcase/sysadmin/index.html
+++ b/showcase/sysadmin/index.html
@@ -14,6 +14,7 @@
    <body>
 <img src="https://pp.userapi.com/c840637/v840637845/24532/AECqL-4x0bM.jpg" width="100%" height="281"/>
 <img src="https://pp.userapi.com/c840726/v840726845/30488/V1aNqXtTFEM.jpg" width="100%" height="281"/>
+<img src="https://pp.userapi.com/c830108/v830108042/cb3a/kZzOa73fQfo.jpg" width="100%" height="281"/>
 
   </body>
 </html>
