--- a/showcase/sysadmin/index.html
+++ b/showcase/sysadmin/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>sysadmin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    <style>
-      ::-webkit-scrollbar {
-    width: 0px;
-      /*  img{display:none}*/
-}</style>
+    <style>::-webkit-scrollbar {
+    width: 0px;}</style>
   </head>
    <body>
  <img src="https://pp.userapi.com/c841425/v841425980/39270/j_tiz1j6xHE.jpg" width="100%" height="281"/>
