--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>blockchain</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    <style>
-      ::-webkit-scrollbar {
-    width: 0px;
-  /*  background: coral;*/
-}
-    </style>
+    <style>::-webkit-scrollbar{
+    width:0px;}</style>
   </head>
    <body>
 	   
