--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ue</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    <style>
-      ::-webkit-scrollbar {
-    width: 0px;
-}    </style>
-
+    <style>::-webkit-scrollbar{
+    width: 0px;}</style>
   </head>
    <body>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50eec/kcGePIunlw8.jpg" width="100%" height="281"/>
