--- a/t.html
+++ b/t.html
@@ -5,7 +5,7 @@
 <style></style>
     </head>
     <body>
-            <room class="room"></room>
+            <div class="room"></div>
             
               </body>
     
