--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html lang="ru">
-    <title>CEPBEP</title>
+    <title>CEPBEP
+    </title>
     <head>
             <link rel='stylesheet prefetch' href='css/style.css'>
-<style></style>
+<style>
+        </style>
     </head>    
     <body>
-            <div class="room"></div>           
+            <div class="room">
+        </div>           
               </body>    
         </html>
