--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>    
     <body>
             <div class="room">
+                <center>
                 <a href="https://github.com/CEPBEP">Github</a>
+                </center>
         </div>           
               </body>    
         </html>
