--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
             <div class="room">
                 <center>
-                <a href="https://github.com/CEPBEP">Github</a>
+                <a class="lnk" href="https://github.com/CEPBEP">Github</a>
                 </center>
         </div>           
               </body>    
