--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
             <link rel='stylesheet prefetch' href='css/style.css'>
 <style>
+    .lnk{
+    
+    }
         </style>
     </head>    
     <body>
