--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
             <link rel='stylesheet prefetch' href='css/style.css'>
 <style>
     .lnk{
-    
+    outline: none;
+    text-decoration: none;
+    color: #9E9E9E;
+    font-weight: 900;
+    top: 30px;
+    position: relative;
     }
         </style>
     </head>    
     <body>
             <div class="room">
                 <center>
-                <a class="lnk" href="https://github.com/CEPBEP">Github</a>
+                <a class="lnk" href="https://github.com/CEPBEP">&gt;_ Github/CEPBEP</a>
                 </center>
         </div>           
               </body>    
