--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <body>
             <div class="room">
                 <center>
-                <a class="lnk" href="https://github.com/CEPBEP">&gt;_ Github/CEPBEP</a>
+                <a class="lnk" href="
+                                     https://github.com/CEPBEP
+                                     ">
+                    &gt;_ Github/CEPBEP
+                    </a>
                 </center>
         </div>           
               </body>    
