--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -10,6 +10,7 @@
     width: 0px;}</style>
   </head>
    <body>
+	   <iframe src="//vk.com/video_ext.php?oid=331934534&id=456239414&hash=a8b0d9a623e2207e&hd=2" width="100%" height="480" frameborder="0" allowfullscreen></iframe>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50eec/kcGePIunlw8.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c836732/v836732534/3c729/f-kXEMVp4-Y.jpg" width="100%" height="281"/>
