--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -14,6 +14,6 @@
        <iframe src="https://vk.com/video_ext.php?oid=154407121&id=456239050&hash=0e7c701b2e494e8b&hd=1" width="100%" height="480" frameborder="0">
 	</iframe>
 	   <br>
-	   <h2>Пример:</h2> <a href="https://cepbep.github.io/showcase/blockchain/"> в консоли ход выполнения</a>
+	   <h2>Пример:</h2> <a href="https://cepbep.github.io/showcase/blockchain/"> в консоли браузера ход выполнения</a>
   </body>
 </html>
