--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -16,7 +16,7 @@
 	   <center>
 	   <h2 style="
     display: inline;
-">Пример:<a href="https://cepbep.github.io/showcase/blockchain/">
+"><a href="https://cepbep.github.io/showcase/blockchain/">
 		   Пример (в консоли браузера ход выполнения)
 		   </a>
 		   </h2>
