--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -17,7 +17,7 @@
 	   <h2 style="
     display: inline;
 "><a href="https://cepbep.github.io/showcase/blockchain/">
-		   Пример (в консоли браузера ход выполнения)
+		   Пример (ход выполнения в консоли браузера )
 		   </a>
 		   </h2>
 	   </center>
