--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -15,7 +15,7 @@
 	   <br>
 	   <center>
 	   <h2 style="
-    display: inline;
+    display: inline;font-weight:900;
 "><a href="https://cepbep.github.io/showcase/blockchain/">
 		   Пример (ход выполнения в консоли браузера )
 		   </a>
