--- a/showcase/blockchain/index.html
+++ b/showcase/blockchain/index.html
@@ -44,14 +44,14 @@
                 </svg>
               </span>
               <span class="navbar-item" href="">
-                <h1 id="time"></h1><h1 id="t" style="display:none;"></h1><h1 id="status"> - [0] : connect : true (проверка соединения)</h1>
+                <h1 id="time"></h1><h1 id="t" style="display:none;"></h1><!--<h1 id="status"> - [0] : connect : true (проверка соединения)</h1>-->
     <code id="a1" style="display:none;"></code>
     <!--<br>-->
-    <decrypted id="a2"></decrypted>
+    <decrypted id="a2"></decrypted><!--
     <h1 style="
     position: absolute;
     top: 45px;
-"> - [1] : создание блоков</h1>
+"> - [1] : создание блоков</h1>-->
               </span>
           
               <button class="button navbar-burger">
