--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -16,7 +16,7 @@
 	   <center>
 	   <h2 style="
     display: inline;font-weight:900;
-"><a href="https://cepbep.github.io/showcase/blockchain/">
+"><a href="https://cepbep.github.io/showcase/blockchain/" target="blank">
 		   Пример (ход выполнения в консоли браузера )
 		   </a>
 		   </h2>
