--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -17,7 +17,7 @@
 	   <h2 style="
     display: inline;font-weight:900;
 "><a href="https://cepbep.github.io/showcase/blockchain/" target="blank">
-		   Пример (ход выполнения в консоли браузера )
+		   открыть пример (ход выполнения в консоли браузера )
 		   </a>
 		   </h2>
 	   </center>
