--- a/showcase/blockchain/i.html
+++ b/showcase/blockchain/i.html
@@ -8,8 +8,10 @@
     <style>::-webkit-scrollbar{
     width:0px;}</style>
   </head>
-   <body>	   
+   <body>
+	   <a href="https://pp.userapi.com/c841620/v841620337/65ce2/3CJtu_pWMMM.jpg" target="blank">
      <img src="https://pp.userapi.com/c841620/v841620337/65ce2/3CJtu_pWMMM.jpg" width="100%" height="281"/>
+	   </a>
        <iframe src="https://vk.com/video_ext.php?oid=154407121&id=456239050&hash=0e7c701b2e494e8b&hd=1" width="100%" height="480" frameborder="0">
 	</iframe>
 	   <br>
