--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     .lnk{
     outline: none;
     text-decoration: none;
-    color: #9E9E9E;
+    color: #263851;
     font-weight: 900;
     top: 30px;
     position: relative;
