--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     .lnk{
     outline: none;
     text-decoration: none;
-    color: #263851;
+    color: #e4e4e4;
     font-weight: 900;
     top: 30px;
     position: relative;
+    background: #2f446b;
+    padding: 15px;
+    border-radius: 10px;
     }
         </style>
     </head>    
