--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <head>
        <link rel='stylesheet prefetch' href='css/style.css'>
 <style>
+    @font-face {font-family: 'font';font-style: normal;
+    src: local('font'), url(css/font.ttf) format('truetype');
     .lnk{
+    font-family:'font';
     outline: none;
     text-decoration: none;
     color: #e4e4e4;
