--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        <link rel='stylesheet prefetch' href='css/style.css'>
 <style>
     @font-face {font-family: 'font';font-style: normal;
-    src: local('font'), url(css/font.ttf) format('truetype');
+        src: local('font'), url(css/font.ttf) format('truetype');}
     .lnk{
     font-family:'font';
     outline: none;
