--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
                                      https://github.com/CEPBEP
                                      ">
                     &gt;_ Github/CEPBEP
-                    </a>                  
+                    </a>  
+                      <a class="lnk" href="
+                                     https://git.io/fAH6W
+                                     ">
+                                              &gt;_ YouTube/Channel
+                    </a>  
+                    
+                    
                 </center>               
         </div>           
               </body>    
