--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                                      ">
                     &gt;_ Github/CEPBEP
                     </a>  
+                    &nbsp;
                       <a class="lnk" href="
                                      https://git.io/fAH6W
                                      ">
