--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     &nbsp;
                       <a class="lnk" href="
                                      https://git.io/fAH6W
-                                     ">
+                                     "  style="background: #F44336;">
                                               &gt;_ YouTube/Channel
                     </a>  
                     
