--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                     </a>  
                     &nbsp;
                       <a class="lnk" href="
-                                     https://git.io/fAH6W
+                                     https://www.youtube.com/channel/UCzYJgnoyoqvpBfMIJbO5CAA
                                      "  style="background: #F44336;">
-                                              &gt;_ YouTube/Channel
+                                              YouTube/Channel
                     </a>  
                     
                     
