--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -9,7 +9,8 @@
     <style>::-webkit-scrollbar{
     width: 0px;}</style>
   </head>
-   <body>	   
+   <body>	
+	   <img src="img/window_1.png" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50eec/kcGePIunlw8.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c836732/v836732534/3c729/f-kXEMVp4-Y.jpg" width="100%" height="281"/>
