--- a/showcase/ue/video.html
+++ b/showcase/ue/video.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+	
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ue</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+    <style>::-webkit-scrollbar{
+    width: 0px;}</style>
+  </head>
+   <body>
+	   <iframe src="//vk.com/video_ext.php?oid=331934534&id=456239336&hash=aa6fb22b067febf0&hd=2" width="100%" height="480" frameborder="0" allowfullscreen></iframe>
+	   <iframe src="//vk.com/video_ext.php?oid=331934534&id=456239124&hash=67fe833398183283&hd=2" width="100%" height="480" frameborder="0" allowfullscreen></iframe>
+	   <iframe src="//vk.com/video_ext.php?oid=331934534&id=456239416&hash=f2cce4d7ce464a6b&hd=2" width="100%" height="480" frameborder="0" allowfullscreen></iframe>
+  </body>
+</html>
