--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -11,10 +11,14 @@
   </head>
    <body>	
 	   <img src="img/window_1.png" width="100%" height="281"/>
+	   <img src="img/Room_1.png" width="100%" height="281"/>
+	   <img src="img/Room_2.png" width="100%" height="281"/>
+	   <img src="img/Room_3.png" width="100%" height="281"/>
+	   <img src="img/Room_4.png" width="100%" height="281"/> <!--
 	   <img src="https://pp.userapi.com/c637426/v637426534/50eec/kcGePIunlw8.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c836732/v836732534/3c729/f-kXEMVp4-Y.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637124/v637124534/4e582/0TdHnKsryhA.jpg" width="100%" height="281"/>
-	   <img src="https://pp.userapi.com/c636321/v636321534/5f61f/xIJX2DukDR4.jpg" width="100%" height="281"/>
+	   <img src="https://pp.userapi.com/c636321/v636321534/5f61f/xIJX2DukDR4.jpg" width="100%" height="281"/> -->
   </body>
 </html>
