--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -16,6 +16,7 @@
 	   <img src="img/Room_2.png" width="100%" height="281"/>
 	   <img src="img/Room_4.png" width="100%" height="281"/>
 	   <img src="img/Carbon_1.png" width="100%" height="281"/>
+	   <img src="img/Carbon_2.png" width="100%" height="281"/>
 	   
        <!--<img src="https://pp.userapi.com/c637426/v637426534/50eec/kcGePIunlw8.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" width="100%" height="281"/>
