--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -9,12 +9,12 @@
     <style>::-webkit-scrollbar{
     width: 0px;}</style>
   </head>
-   <body>	
-	   <img src="img/window_1.png" width="100%" height="281"/>
+   <body><a href="https://cepbep.github.io/showcase/ue/img/window_1.png">	
+	   <img src="img/window_1.png" width="100%" height="281"/></a>
 	   <img src="img/Room_2.png" width="100%" height="281"/>
+	   <img src="img/Room_4.png" width="100%" height="281"/>
 	   <img src="img/Room_3.png" width="100%" height="281"/>
 	   <img src="img/Room_1.png" width="100%" height="281"/>
-	   <img src="img/Room_4.png" width="100%" height="281"/>
 	   <img src="img/Carbon_1.png" width="100%" height="281"/>
 	   <img src="img/Carbon_2.png" width="100%" height="281"/>
 	   
