--- a/showcase/ue/index.html
+++ b/showcase/ue/index.html
@@ -9,14 +9,20 @@
     <style>::-webkit-scrollbar{
     width: 0px;}</style>
   </head>
-   <body><a href="https://cepbep.github.io/showcase/ue/img/window_1.png">	
+   <body><a href="https://cepbep.github.io/showcase/ue/img/window_1.png" target="blank">	
 	   <img src="img/window_1.png" width="100%" height="281"/></a>
-	   <img src="img/Room_2.png" width="100%" height="281"/>
-	   <img src="img/Room_4.png" width="100%" height="281"/>
-	   <img src="img/Room_3.png" width="100%" height="281"/>
-	   <img src="img/Room_1.png" width="100%" height="281"/>
-	   <img src="img/Carbon_1.png" width="100%" height="281"/>
-	   <img src="img/Carbon_2.png" width="100%" height="281"/>
+	 <a href="https://cepbep.github.io/showcase/ue/img/Room_2.png" target="blank">
+		 <img src="img/Room_2.png" width="100%" height="281"/></a>
+	   <a href="https://cepbep.github.io/showcase/ue/img/Room_4.png" target="blank">
+		   <img src="img/Room_4.png" width="100%" height="281"/></a>
+	   <a href="https://cepbep.github.io/showcase/ue/img/Room_3.png" target="blank">
+		   <img src="img/Room_3.png" width="100%" height="281"/></a>
+	   <a href="https://cepbep.github.io/showcase/ue/img/Room_1.png" target="blank">
+		   <img src="img/Room_1.png" width="100%" height="281"/></a>
+	   <a href="https://cepbep.github.io/showcase/ue/img/Carbon_1.png" target="blank">
+		   <img src="img/Carbon_1.png" width="100%" height="281"/></a>
+	   <a href="https://cepbep.github.io/showcase/ue/img/Carbon_2.png" target="blank">
+		   <img src="img/Carbon_2.png" width="100%" height="281"/></a>
 	   
        <!--<img src="https://pp.userapi.com/c637426/v637426534/50eec/kcGePIunlw8.jpg" width="100%" height="281"/>
 	   <img src="https://pp.userapi.com/c637426/v637426534/50ef6/5Pb6nF5Ms30.jpg" width="100%" height="281"/>
