--- a/showcase/blockchain/ipfs.html
+++ b/showcase/blockchain/ipfs.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ue</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-    <style>::-webkit-scrollbar{
-    width: 0px;}</style>
+    <style>::-webkit-scrollbar{width: 0px;}</style>
   </head>
    <body>
    
