--- a/showcase/blockchain/ipfs.html
+++ b/showcase/blockchain/ipfs.html
@@ -12,7 +12,7 @@
    
 	   <img src="template_ipfs.png" width="100%"/>
 	 
-		<iframe src="//enigmatic-meadow-99471.herokuapp.com/testipfs.php" width="100%" frameborder="0" allowfullscreen></iframe>
+		<iframe src="//goo.gl/bjCfXH" width="100%" frameborder="0" allowfullscreen></iframe>
 	  
   </body>
 </html>
