--- a/showcase/blockchain/ipfs.html
+++ b/showcase/blockchain/ipfs.html
@@ -9,10 +9,9 @@
 	  <style>img{z-index:1;position:relative;}::-webkit-scrollbar{width:0px;}#frame{width=100%;height:90vh;position:relative;top:-110px;z-index:0;}</style>
   </head>
    <body>
-   
 	   <img src="template_ipfs.png" width="100%"/>
-	 
-		<iframe id="frame" src="//goo.gl/bjCfXH" frameborder="0" allowfullscreen></iframe>
+		<iframe id="frame" src="//goo.gl/bjCfXH" frameborder="0" allowfullscreen>
+	   </iframe>
 	  
   </body>
 </html>
