--- a/showcase/blockchain/ipfs.html
+++ b/showcase/blockchain/ipfs.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ipfs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-	  <style>arrow{position:absolute;color:white;font-size:4em;top:75%;left:60%;z-index:2;}img{z-index:1;position:relative;}::-webkit-scrollbar{width:0px;}#frame{width:100%;height:90vh;position:relative;top:-110px;z-index:0;}</style>
+	  <style>img{z-index:1;position:relative;}::-webkit-scrollbar{width:0px;}#frame{width:100%;height:90vh;position:relative;top:-110px;z-index:0;}</style>
   </head>
    <body>
-	   <arrow>↓</arrow>
+	   
 	   <img src="template_ipfs.png" width="100%"/>
 		<iframe id="frame" src="//goo.gl/bjCfXH" frameborder="0" allowfullscreen>
 	   </iframe>	  
