--- a/showcase/blockchain/ipfs.html
+++ b/showcase/blockchain/ipfs.html
@@ -8,7 +8,14 @@
 	  <style>img{z-index:1;position:relative;}::-webkit-scrollbar{width:0px;}#frame{width:100%;height:90vh;position:relative;top:-110px;z-index:0;}</style>
   </head>
    <body>
-	   
+	   <p style="
+    position: absolute;
+    z-index:  2;
+    left: 14vh;
+    top: 1vh;
+    font-weight: 900;
+    color: #ceaf40;
+">под картинкой поля ввода</p>
 	   <img src="template_ipfs.png" width="100%"/>
 		<iframe id="frame" src="//goo.gl/bjCfXH" frameborder="0" allowfullscreen>
 	   </iframe>	  
