--- a/showcase/blockchain/ipfs.html
+++ b/showcase/blockchain/ipfs.html
@@ -15,9 +15,6 @@
     top: 1vh;
     font-weight: 900;
     color: #ceaf40;
-">под картинкой поля ввода</p>
-	   <img src="template_ipfs.png" width="100%"/>
-		<iframe id="frame" src="//goo.gl/bjCfXH" frameborder="0" allowfullscreen>
-	   </iframe>	  
+">..тут надо переверстать</p>	  
   </body>
 </html>
