--- a/showcase/blockchain/ipfs.html
+++ b/showcase/blockchain/ipfs.html
@@ -15,6 +15,6 @@
     top: 1vh;
     font-weight: 900;
     color: #ceaf40;
-">..тут надо переверстать</p>	  
+">..тут надо переверстать, а то не красиво</p>	  
   </body>
 </html>
