--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html lang="ru">
-    
+  
+      <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>CEPBEP
     </title>
-    <head>
+   
        <link rel='stylesheet prefetch' href='css/style.css'>
 <style>
     @font-face {font-family: 'font';font-style: normal;
