--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     padding: 15px;
     border-radius: 10px;
     }
+  body{background-color: white;}
             .container {
             background-image: url();
     background-size: contain;
