--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ display: none;
                     &nbsp;
                       <a class="lnk" href="
                                      https://www.youtube.com/channel/UCzYJgnoyoqvpBfMIJbO5CAA
-                                     "  style="background: #F44336;">
+                                     "  style="    bottom: 0;
+    top: 95%;
+    position: absolute;">
                                               YouTube/Channel
                     </a>  
                     
