--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>CEPBEP
     </title>
-   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
        <link rel='stylesheet prefetch' href='css/style.css'>
 <style>
     @font-face {font-family: 'font';font-style: normal;
