--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     @font-face {font-family: 'font';font-style: normal;
         src: local('font'), url(css/font.ttf) format('truetype');}
     .lnk{
-    font-family:'font';
+       font-family: 'font';
     outline: none;
     text-decoration: none;
-    color: #e4e4e4;
+    color: #ff6363;
     font-weight: 900;
     top: 30px;
     position: relative;
-    background: #2f446b;
+    /* background: #2f446b; */
     padding: 15px;
     border-radius: 10px;
     }
@@ -60,7 +60,7 @@ display: none;
                                      "  style="    bottom: 0;
     top: 95%;
     position: absolute;">
-                                              YouTube/Channel
+                                              YouTube
                     </a>  
                     
                     
