--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     color: #ff6363;
     font-weight: 900;
     top: 30px;
+      right:5vh;
     position: relative;
     /* background: #2f446b; */
     padding: 15px;
