--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     color: #ff6363;
     font-weight: 900;
     top: 30px;
-      right:5vh;
+      right:5.5vh;
     position: relative;
     /* background: #2f446b; */
     padding: 15px;
@@ -59,7 +59,7 @@ display: none;
                       <a class="lnk" href="
                                      https://www.youtube.com/channel/UCzYJgnoyoqvpBfMIJbO5CAA
                                      "  style="    bottom: 0;
-    top: 95%;
+    top: 65px;
     position: absolute;">
                                               YouTube
                     </a>  
