--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   
       <head>
     <meta charset="utf-8">
+        <META HTTP-EQUIV="REFRESH" CONTENT="0;URL=https://sourcerer.io/cepbep">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>CEPBEP
